--- a/README
+++ b/README
@@ -15,6 +15,8 @@ FOP readme
 
     Compilation of Fop is started by executing build. It requires
     Xerces-J, Xalan and bsf.jar (comes with Xalan) in your classpath. 
+    Fop builds successfully with Xerces 1.1.2 and Xalan 1.1, earlier versions
+    may prove problematic, if they don't support the final version of SAX 2. 
     You can find more details in build.xml or in the documentation under the 
     heading 'compiling'.
 
