--- a/README
+++ b/README
@@ -2,21 +2,16 @@ FOP readme
 
     What is FOP?
     FOP is the world's first print formatter driven by XSL formatting
-    objects. It is a Java 1.1 application that reads a formatting object
-    tree and then turns it into a PDF document. The formatting object
-    tree, can be in the form of an XML document (output by an XSLT engine
-    like XT or Xalan) or can be passed in memory as a DOM Document or (in
-    the case of XT) SAX events.
+    objects. It is a Java application that reads a formatting object
+    tree conforming to the XSL working draft from 18. October 2000 and 
+    then turns it into a PDF document or allows you to preview it 
+    directly on screen. 
     
     FOP is part of Apache's XML project. The homepage of FOP is 
     http:/xml.apache.org/fop 
 
-    HTML-Documentation can be found in the subdirectory /docs. 
+    HTML-Documentation can be found in the subdirectory /xml-fop/docs/html-docs. 
+    A list of bugs, things worked on, and the names of the committers of this project
+    can be found in the file status in root.
 
-    Compilation of Fop is started by executing build. It requires
-    Xerces-J, Xalan and bsf.jar (comes with Xalan) in your classpath. 
-    Fop builds successfully with Xerces 1.1.2 and Xalan 1.1, earlier versions
-    may prove problematic, if they don't support the final version of SAX 2. 
-    You can find more details in build.xml or in the documentation under the 
-    heading 'compiling'.
 
