--- a/README
+++ b/README
@@ -3,14 +3,14 @@ FOP readme
     What is FOP?
     FOP is the world's first print formatter driven by XSL formatting
     objects. It is a Java application that reads a formatting object
-    tree conforming to the XSL working draft from 18. October 2000 and 
+    tree conforming to the XSL candidate release (21. November 2000) and 
     then turns it into a PDF document or allows you to preview it 
     directly on screen. 
     
     FOP is part of Apache's XML project. The homepage of FOP is 
     http:/xml.apache.org/fop 
 
-    HTML-Documentation can be found in the subdirectory /xml-fop/docs/html-docs. 
+    HTML-Documentation can be found in the subdirectory docs/html-docs. 
     A list of bugs, things worked on, and the names of the committers of this project
     can be found in the file status in root.
 
