adds hyphenation  (Carlos Villegas, Fotis Jannidis) and simple configuration support (F.J.)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193861 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/readme
+++ b/lib/readme
@@ -9,3 +9,4 @@ w3c.jar                  the svg library from the w3 consortium
 Compare.java             a ant task which compares files
 Fop.java                 a ant task which allows calling Fop from Ant 
 Xslt.java                a ant task which allows calling Xalan from Ant
+SerializeHyphPattern     a ant task which serializes hyphenation patterns for quicker access
