adds a short reference for the xsl:fo specification
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193883 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/readme
+++ b/docs/readme
@@ -1,5 +1,8 @@
 Content of the directory xml-fop/docs
 
+xslfoRef.xml  a short xsl:fo reference
+xml2pdf.xsl   a stylesheet, to convert xslfoRef.xml to pdf
+
 html-docs     Fop documentation in html files
 xml-docs      Fop documentation in xml files and a script to create pdf documentation
 
