--- a/README
+++ b/README
@@ -10,8 +10,19 @@ FOP readme
     FOP is part of Apache's XML project. The homepage of FOP is 
     http:/xml.apache.org/fop 
 
-    HTML-Documentation can be found in the subdirectory docs/html-docs. 
-    A list of bugs, things worked on, and the names of the committers of this project
-    can be found in the file status in root.
+    HTML-Documentation can be found in the subdirectory xml-fop/docs/html-docs. 
+
+    The names of the committers of this project and what the developers are working on
+    can be found in the file STATUS in root.
+
+    A list of all changes to the source can be found in the file CHANGES
+
+    Please report bugs to bugzilla at http://nagoya.apache.org/bugzilla/
+
+    Discussion of Fop takes place in fop-dev@xml.apache.org (subscribe at 
+    fop-dev-subscribe@xml.apache.org)
+
+    Before you post any questions, please have a look at the FAQ at 
+    http://www.owal.co.uk:8090/asf/servlet/asf/
 
 
